Update the about page

--- a/about.html
+++ b/about.html
@@ -25,7 +25,31 @@
       </ul>
     </nav>
 
-    <h1>About Page</h1>
+    <section class="about-content">
+      <h2>Welcome to Our Cafe</h2>
+      <p>
+        Our cafe is a cozy place where you can enjoy a cup of freshly brewed
+        coffee, delicious pastries, and a warm atmosphere. We believe in
+        providing our customers with the best experience possible, whether
+        you're here to work, relax, or catch up with friends.
+      </p>
+
+      <h2>Our History</h2>
+      <p>
+        Established in 2020, our cafe started as a small family-owned business
+        with a passion for coffee and community. Over the years, we have grown
+        and evolved, but our commitment to quality and customer satisfaction has
+        remained the same.
+      </p>
+
+      <h2>Our Mission</h2>
+      <p>
+        Our mission is to create a welcoming space where everyone feels at home.
+        We strive to serve the finest coffee and food, sourced from local
+        suppliers and prepared with love. We are dedicated to sustainability and
+        supporting our local community.
+      </p>
+    </section>
 
     <footer>
       <div class="footer-content">
